[fix] images cropping in Images explore

--- a/aim/web/ui/src/components/MediaSet/MediaSet.scss
+++ b/aim/web/ui/src/components/MediaSet/MediaSet.scss
@@ -71,7 +71,6 @@
 }
 
 .ImageBox {
-  margin-right: toRem(10px);
   height: 100%;
   position: absolute;
   &__imageWrapper {
@@ -85,6 +84,7 @@
       align-items: center;
       width: 100%;
       height: 100%;
+      width: calc(100% - 0.375rem);
       & > span {
         height: 1rem;
         margin-top: 0.125rem;
@@ -94,10 +94,10 @@
         width: 100%;
       }
       & > img {
-        width: calc(100% - 0.375rem);
         margin-top: toRem(5px);
-        margin-right: toRem(5px);
         padding: toRem(1px);
+        width: 100%;
+        height: 100%;
       }
       &-heightAlign {
         img {
@@ -107,8 +107,8 @@
     }
     &__zoomIconWrapper {
       position: absolute;
-      top: toRem(9px);
-      right: toRem(10px);
+      top: toRem(14px);
+      right: toRem(16px);
       color: $white;
       display: flex;
       align-items: center;
